modyfied pagination posts and container

--- a/client/src/components/common/pagination/Pagination.scss
+++ b/client/src/components/common/pagination/Pagination.scss
@@ -3,34 +3,33 @@
 .pagination {
     margin: 0 auto;
     text-align: center;
-
-    &__list {
+    
+    &_list {
         display: flex;
         justify-content: center;
+        align-items: center;
         list-style-type: none;
         font-size: $base-size * 1.5;
-        
-        &__item {
-            display: block;
+
+        &_item {
+            display: flex;
             width: $base-size * 2;
             height: $base-size * 2;
             margin: $base-size;
-            display: flex;
             justify-content: center;
             align-items: center;
             cursor: pointer;
             border-radius: $radius;
             transition: .2s;
             color: $color-text-light;
-            
+    
             &:hover {
                 color: $color-text;
             }
-
+        
             &--active {
                 color: $color-primary;
             }
         }
-
-    }   
+    }
 }
